# EPITECH_myrpg

./: .gitignore  .legend  CMakeLists.txt  CMakePresets.json  Makefile  quest  settings.cfg
lib/my_physics/: CMakeLists.txt  Makefile
lib/my_physics/Physics/: physics_constants.h
lib/my_physics/Physics/DynamicTree/: binary_tree.h
lib/my_physics/cmake/: config.cmake  macros.cmake
lib/my_physics/include/Physics/: physics.h  physics_constants.h  world.h
lib/my_physics/src/Physics/: CMakeLists.txt
lib/simple_widgets/: .gitignore  CMakeLists.txt  Makefile  README.md
lib/simple_widgets/cmake/: config.cmake  macros.cmake
lib/simple_widgets/doc/: CMakeLists.txt  Doxyfile.in
lib/simple_widgets/include/sw/: config.h  layout.h  state.h  types.h  widget.h
lib/simple_widgets/src/: CMakeLists.txt  layout.c  layout2.c  state.c  widget.c  widget2.c  widget3.c  widget4.c  widget5.c
lib/simple_widgets/src/layouts/: CMakeLists.txt  grid.c  grid2.c  vertical.c  vertical2.c
lib/simple_widgets/src/widgets/: CMakeLists.txt  base.c  base2.c  button.c  button2.c  button3.c  button4.c  label.c
src/: CMakeLists.txt  get_file_info.c  main.c  parse_quests_info.c  quests.c  setup.c
src/Drawables/: CMakeLists.txt  drawable_create.c  drawable_destroy.c  drawable_list_fcts.c  drawable_list_fcts_texture.c
src/Functions/: CMakeLists.txt  btns_callbacks.c  center_mouse.c  create_btn.c  get_numbers.c  get_rand.c  is_in_bounds.c  my_map_cmp.c  my_strlen_to.c  my_strndup.c  read_file.c  trim_str.c
src/GameEngine/: CMakeLists.txt  game.c  run.c  state.c
src/GameEngine/asset_manager/: CMakeLists.txt  asset_manager.c  asset_manager_destroy.c  asset_manager_drop.c  default_font.h  load_textures.c
src/GameEngine/audio_manager/: CMakeLists.txt  audio_manager_destroy.c  audio_manager_drop.c  audio_manager_init.c  audio_manager_play.c  audio_manager_update_volume.c  load_audio.c
src/GameEngine/drawables/: remove_drawable.c
src/GameEngine/game/: CMakeLists.txt  game.c  game_state_stack.c
src/GameEngine/particle_manager/: CMakeLists.txt  particle_manager_clear.c  particle_manager_create.c  particle_manager_destroy.c  particle_manager_draw.c  particle_manager_spawn.c  particle_manager_update.c
src/GameEngine/settings/: CMakeLists.txt  cfg_file_drop.c  cfg_file_get_value.c  cfg_file_init.c  cfg_file_read.c  game_settings_create.c  game_settings_init.c  game_settings_save.c  settings_check.c  settings_destroy.c  settings_init_default.c  settings_parse.c  settings_read.c  settings_write.c
src/GameEngine/state/: CMakeLists.txt  state.c  state_destroy.c  state_draw.c  state_handle_events.c  state_init.c  state_pause.c  state_resume.c  state_update.c
src/Rpg/: CMakeLists.txt  rpg_create.c  rpg_destroy.c  rpg_draw.c  rpg_handle_event.c  rpg_update.c
src/Rpg/Entities/: CMakeLists.txt
src/Rpg/Entities/Allies/: CMakeLists.txt  allies_add_ally.c  allies_destroy.c  allies_init.c
src/Rpg/Entities/Animations/: CMakeLists.txt  animations_destroy.c  animations_init.c  animations_set_animation.c  animations_update.c
src/Rpg/Entities/Entity/: CMakeLists.txt  entity_add_action.c  entity_add_spell.c  entity_attack.c  entity_cast_spell.c  entity_create.c  entity_destroy.c  entity_draw.c  entity_force_end_action.c  entity_handle_events.c  entity_init.c  (+5 more)
src/Rpg/Fight/: CMakeLists.txt  cell_tests.c  fight_create.c  fight_destroy.c  fight_draw.c  fight_draw_line.c  fight_get_line.c  fight_get_tile.c  fight_handle_events.c  fight_init_enemy.c  fight_init_entities.c  fight_pathfinding.c  fight_pathfinding_2.c  fight_pathfinding_nodes.c  fight_pos_vec_conversions.c  fight_rect_buff.c  fight_show_sight.c  fight_spawn_particles.c  fight_turn.c  fight_update.c
src/Rpg/InfoBox/: CMakeLists.txt  infobox_create.c  infobox_destroy.c  infobox_draw.c  infobox_init.c  infobox_resize.c  infobox_text.c  infobox_update.c
src/Rpg/Interfaces/: CMakeLists.txt  battle_end_draw.c  battle_end_setup.c  init_battle_end.c  init_inventory.c  inventory_draw_items.c  inventory_draw_other.c  inventory_handle_events.c  inventory_index.c  inventory_input.c  inventory_open.c  inventory_utils.c  rpg_create_item.c  rpg_create_item_name_gen.c  rpg_draw_item_tooltip.c
src/Rpg/Interfarces/: CMakeLists.txt  battle_end_draw.c  init_battle_end.c  init_general_ui.c  init_inventory.c  inventory_draw_items.c  inventory_draw_other.c  inventory_handle_events.c  inventory_index.c  inventory_input.c  inventory_open.c  inventory_utils.c  rpg_create_item.c  rpg_create_item_name_gen.c  rpg_draw_item_tooltip.c
src/Rpg/Map/: CMakeLists.txt  map_create.c  map_destroy.c  map_draw.c  map_load_zone.c  map_move.c  map_update.c  map_zoom.c
src/Rpg/Quests/: CMakeLists.txt  quests_check_error.c  quests_draw.c  quests_engine.c  quests_engine_destroy.c  quests_get_file_info.c  quests_parse_quests_info.c  quests_setup.c  quests_utils.c
src/Settings/: CMakeLists.txt
src/States/: CMakeLists.txt
src/States/Game/: CMakeLists.txt  game_create.c  game_cst.c  game_destroy.c  game_draw.c  game_handle_events.c  game_handle_input.c  game_pause.c  game_resume.c  game_update.c
src/States/GamePause/: CMakeLists.txt  pause_create.c  pause_cst.c  pause_destroy.c  pause_draw.c  pause_handle_events.c  pause_pause.c  pause_resume.c  pause_update.c
src/States/Menu/: CMakeLists.txt  menu_btn_callbacks.c  menu_create.c  menu_cst.c  menu_destroy.c  menu_draw.c  menu_handle_events.c  menu_handle_input.c  menu_init_gui.c  menu_pause.c  menu_resume.c  menu_update.c
src/States/Settings/: CMakeLists.txt  settings_adjust_button.c  settings_body.c  settings_create.c  settings_cst.c  settings_destroy.c  settings_display_button.c  settings_draw.c  settings_footer.c  settings_handle_events.c  settings_handle_input.c  settings_init_gui.c  settings_pause.c  settings_resume.c  settings_title.c  settings_update.c
tests/: CMakeLists.txt  test_nothing.c
tests/Functions/: CMakeLists.txt  test_trim_str.c
tests/GameEngine/: CMakeLists.txt
tests/GameEngine/Settings/: test_cfg_file.c
tests/Rpg/: CMakeLists.txt
tests/Rpg/Quests/: CMakeLists.txt  test_quest_file.c
(+454 files in other folders)
